--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -1,11 +1,14 @@
-<section class="ae-container-fluid ae-container-fluid--inner rk-portfolio">
+<section *ngIf="carga" class="ae-container-fluid ae-container-fluid--inner rk-portfolio">
 
-    <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4"><a routerLink="/item"
-            class="rk-item ae-masonry__item"><img src="assets/img/project-1.jpg" alt="">
-            <div class="item-meta">
-                <h2>Essential Stationery</h2>
-                <p>Branding</p>
+    <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
+        <a *ngFor="let producto of productos" routerLink="/item/{{producto.cod}}"
+            class="rk-item ae-masonry__item"><img src="assets/productos/{{producto.url}}.jpg" alt="">
+            <div routerLink="/item/{{producto.cod}}" class="item-meta">
+                <h2>{{producto.titulo}}</h2>
+                <p>{{producto.categoria}}</p>
             </div>
         </a>
     </div>
 </section>
+
+<app-loader *ngIf="!carga"></app-loader>
